--- a/math seminar/final project/final-project.tex
+++ b/math seminar/final project/final-project.tex
@@ -1,4 +1,4 @@
-\documentclass[8pt]{extarticle} 
+\documentclass[10pt]{extarticle} 
 \usepackage{graphicx} % Required for inserting images
 \usepackage{amsfonts}
 \usepackage{enumitem}
@@ -8,7 +8,7 @@
 \usepackage{amsmath}
 \usepackage{multicol}
 \usepackage{mathabx}
-\usepackage[bottom=0.5cm, right=1.5cm, left=1.5cm, top=1.5cm, headheight=16pt]{geometry}
+\usepackage[bottom=2.5cm, right=1.5cm, left=1.5cm, top=2.5cm, headheight=16pt]{geometry}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{amsmath}
@@ -29,6 +29,11 @@
 \usepackage{animate}
 \usepackage{physics}
 
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[R]{\thepage} % Left header
+\renewcommand{\headrulewidth}{0pt} % Remove header line
 
 
 \title{[Math Seminar] The Parity Problem in Sieve Theory}
@@ -99,8 +104,6 @@ $$
 N_0 \geq \sum_{k=0}^r (-1)^k \sum_{|I| = k} N(I)  \quad \quad \text{ if }r \text{ is odd}
 $$
 This type of logic is the basis for all combinatorial sieves.
-
-\pagebreak
 \subsection{Further Sieves} 
 However, this is still is not good enough for our purposes. The ``black and white'' approach of combinatorial sieves, where numbers are either completely included or excluded based on their divisibility, is limited in scope. 
 It's not nuanced enough for complex tasks such as estimating the distribution of primes within a specific range. 
@@ -125,7 +128,7 @@ And, similar to the issues that we've seen in the above sieves, the main problem
 
 
 
-
+\pagebreak
 \section{The Parity Problem}  
 \subsection{Introduction}
 Now, the problem with sieves is something - originally introduced by Selberg - that prevents us from counting or lower bounding the primes themselves. So although sieves can provide good upper bounds, lower bounds, and even asymptotic approximations for ``almost primes'', their inability to distinguish between integers with an odd or even number of prime factors - hence the term "parity" - causes an oversight on the subtle arithmetic properties that would allow for our desired precise lower bounds on primes.
@@ -134,6 +137,73 @@ Formally, the Parity Problem is stated as follows.
 \begin{boxedsection}
 \textbf{Definition:} If $A$ is a set whose elements are all products of an odd number of primes (or are all products of an even number of primes), then (without injecting additional ingredients), sieve theory is unable to provide non-trivial lower bounds on the size of $A$. Also, any upper bounds must be off from the truth by a factor of $2$ or more.
 \end{boxedsection}
+In simpler terms, sieve theory is unable to distinguish between integers with an odd or even number of prime factors. This is because the combinatorial sieves we discussed earlier are not nuanced enough to account for the parity of the number of prime factors, thus called the ``parity'' problem. \\
+\\
+So, sieve theory allows us to count almost primes (with even or odd number of prime factors) or count numbers with $6$ or $7$ prime factors, which can be counted by the Bombieri sieve. 
+However, the parity problem is important because it directly implicates the idea of counting primes. Since primes are definitionally integers with odd number of prime factors (specifically $1$), sieve theory is unable to provide particularly meaningful bounds on the number of exact primes (not almost primes) in a given interval. 
+Similarly, we cannot use plain sieve theory to answer the question about counting semiprimes, which we are numbers with only $2$ prime factors. 
+\subsection{Example}
+\subsubsection{Overview of The Selberg Problem}
+The most famous example of the parity problem was introduced by Selberg and later referenced by Cojocaru and Murty. Essentially, the problem is presented as follows.\\
+\\
+Imagine you have some set $A$ defined as the set of integers less than or equal to $x$ such that it has no prime divisors $\leq x^\frac{1}{2}$ that also have an even number of prime factors. More formally,
+$$
+A = \left\{n \in [1,x] \;:\; n \neq 0 \text{ mod }p, \;\forall p\leq x^{\frac{1}{2}} \text{ and } n \text{ has an even number of prime factors}\right\}
+$$
+If we try to find the cardinality of set $A$, no matter what type of sieve we use (and any choice of weights for those sieves), the upper bound for this set is always the following.
+$$
+|A| \leq \frac{(2 + \mathcal{O}(1))x}{\ln(x)}
+$$
+However, if you think about this set logically, the cardinality of set $|A|$ should always be $0$. This should be fairly obvious, but if some $n$ has an even number of prime factors, at least one of them must be $\leq x^{\frac{1}{2}}$, which means that $|A|$ must be of cardinality $0$. As you can see, in the case of only even prime factors, sieve methods are pretty much unable to generate any meaningful bound on the defined set $A$. \\
+\\
+Similarly, take the same problem but only consider those numbers with an odd number of prime factors. So now, the set $A$ is defined as
+$$
+A = \left\{n \in [1,x] \;:\; n \neq 0 \text{ mod }p, \;\forall p\leq x^{\frac{1}{2}} \text{ and } n \text{ has an odd number of prime factors}\right\}
+$$
+Similarly, no matter what type of basic sieve we use and the weights we pair with said sieve, the upper bound for this set is always the following.
+$$
+|A| \leq \frac{(2 + \mathcal{O}(1)) \cdot x}{\ln(x)}
+$$
+If you think about this set outside of the concept of sieves, the elements of $A$ are just the prime numbers from $(x^{\frac{1}{2}}, x]$, which we we can count using the PNT (prime number theorem). However, if we use sieve methods to estimate this set, we get a looser bound compared to the prime number theorem.
+$$
+|A| \leq \underbrace{\frac{\left(1 + \mathcal{O}(1)\right) \cdot x}{\ln (x)}}_{\text{PNT}} \leq \underbrace{\frac{(2 + \mathcal{O}(1)) \cdot x}{\ln(x)}}_{\text{Sieve Methods}}
+$$
+As you can clearly see, the sieve method is unable to bound this significantly and actually overestimate the upper bound on the second set by a factor of $2$.
+\subsubsection{Formal Analysis of the Parity Problem}
+To provide a more formal analysis of the parity problem, let's introduce the following Liouville function $\lambda(n)$.
+$$
+\lambda(n) = \begin{cases}
+  +1 & \text{ if } n \text{ has an even number of prime factors}\\
+  -1 & \text{ if } n \text{ has an odd number of prime factors}
+\end{cases}
+$$
+Let's say that we want to count the set $A$ such that $A$ consists of all integers $n \in [N,2N]$ such that $n$ has an even number of prime factors. Using sieve methods described above, we can set up the following weighted divisor-sum bound using our indicator function such that
+$$
+1_A(n) \geq \sum_{d} c_d 1_{d \mid n} (n)
+$$
+However, we are only interested in the set where $A$ has an even number of prime factors, so we multiply by the non-negative weight of $(1 + \lambda(n))$ so that the indicator function evalutes to $0$ in the scenario where $n$ has odd number of prime factors. This results in the following
+$$
+1_A(n) (1 + \lambda(n)) \geq \sum_{d} c_d 1_{d \mid n} (n) (1 + \lambda(n))
+$$
+Since $n \in [N,2N]$, whenever $1_A(n) = 1$, we also know that $(1 + \lambda(n)) = (1 + (-1)) = 0$ which means that the summation across all possible $n$ also evaluates to $0$.
+\begin{align*}
+  \sum_{n} 1_A(n) (1 + \lambda(n)) &\geq \sum_{n} \sum_{d} c_d 1_{d \mid n} (n) (1 + \lambda(n))\\
+  0 &\geq \sum_{d} c_d \frac{N}{d} + \cdots
+\end{align*}
+If you can see, we can't improve on the trivial bound, which means that the sieve method doesn't tell us any particularly meaningful results.\\
+\\
+Similarly, if we use the case where $1 -\lambda(n)$ to quantify the new set $A$ which is the basically the same set except elements of $A$ have an odd number of prime factors, then we get the following.
+\begin{align*}
+  \sum_{n} 1_A(n) (1 - \lambda(n)) = |A| \implies 2|A| \geq |A|
+\end{align*}
+And although the proof is somewhat more involved, the general idea is that $2 \geq 1 - \lambda(n)$, which lets us bound the set $A$ in a non-meaningful way.\\
+\\
+Ultimately, since all prime numbers have an odd number of prime factors, sieve methods are unable to provide non-trivial lower bounds on the number of primes in a given interval. 
+And in the field of number theory, this is a very significant problem since the inability to distinguish between integers with odd or even number of prime factors prevents us from accurately counting the number of primes in a given interval.
+
+
+\pagebreak
+\section{Overcoming the Parity Problem}
 
 
 
